# yiffy-corner-bot

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  update-models.ts  webpack.config.ts
code_migration/: Cargo.toml  Dockerfile  README.md
code_migration/crates/application/: Cargo.toml
code_migration/crates/application/src/: commands.rs  lib.rs  publishers.rs  selectors.rs
code_migration/crates/application/src/actors/: scheduler.rs
code_migration/crates/application/src/commands/: auth.rs  ban_user.rs  browse.rs  manage_poster.rs  moderate.rs  report.rs  set_user_role.rs  start.rs  suggest.rs
code_migration/crates/application/src/selectors/: feed.rs  queue_first.rs
code_migration/crates/application/src/traits/: handler_response.rs
code_migration/crates/domain/src/: elements.rs
code_migration/crates/domain/src/elements/: announcement.rs  cadence.rs  channel.rs  e621.rs  media.rs  post.rs  poster.rs  publisher.rs  publisher_config.rs  tag.rs  tag_policy.rs  telegram.rs  user.rs
code_migration/crates/infra-e621/: Cargo.toml
code_migration/crates/infra-e621/src/: lib.rs
code_migration/crates/infra-fixup/: Cargo.toml
code_migration/crates/infra-fixup/src/: lib.rs
code_migration/crates/infra-furaffinity/: Cargo.toml
code_migration/crates/infra-furaffinity/src/: lib.rs
code_migration/crates/persistence/: Cargo.toml
code_migration/crates/persistence/migrations/: 0001_init.sql  0002_telegram_copies.sql  0005_artists.sql  0007_announcements.sql  0008_spoiler_tags.sql
code_migration/crates/persistence/src/: in_memory.rs  sqlite.rs
code_migration/crates/persistence/src/in_memory/: post.rs  poster.rs  publication.rs  publisher_config.rs  tag_policy.rs  user.rs
code_migration/crates/persistence/src/sqlite/: announcement.rs  post.rs  poster.rs  publication.rs  publisher_config.rs  report.rs  tag_policy.rs  tests.rs  user.rs
code_migration/crates/telegram_bot/: Cargo.toml
code_migration/crates/telegram_bot/src/: announcer.rs  commands.rs  main.rs  publishers.rs  resolvers.rs  state.rs
code_migration/crates/telemetry/src/: lib.rs
config/: default.ts  development.ts  production.ts
config/vault/default/: at.txt
config/vault/development/: at.txt  token.txt
config/vault/production/: name.txt
config/vault/storage/: db.sqlite
crates/application/src/: actors.rs  commands.rs  traits.rs
crates/application/src/actors/: housekeeper.rs  pool_batch.rs  scheduler.rs
crates/application/src/commands/: browse.rs  feed.rs  manage_poster.rs  moderate.rs  phash_check.rs  pool.rs  post_info.rs  report.rs  request_more.rs  scoreboard.rs  suggest.rs
crates/application/src/selectors/: feed.rs
crates/domain/: Cargo.toml
crates/domain/src/: elements.rs
crates/domain/src/elements/: cadence.rs  e621.rs  fulfilling.rs  media.rs  phash.rs  post.rs  poster.rs  publisher.rs  report.rs  scoreboard.rs  shadow_ban.rs  skiplist.rs  tag.rs  tag_policy.rs  tag_rule.rs  user.rs
crates/infra-e621/src/: lib.rs
crates/infra-fixup/: Cargo.toml
crates/infra-fixup/src/: lib.rs
crates/infra-phash/: Cargo.toml
crates/infra-phash/src/: lib.rs
crates/persistence/migrations/: 0003_feed.sql  0004_reports.sql  0006_moderation_audit.sql  0009_announcement_mute.sql  0010_conditional_rules.sql  0011_api_tokens.sql  0012_phash.sql  0013_scoreboards.sql  0014_report_reason.sql  0015_browse_skips.sql  0016_report_contact.sql  0017_forbidden_reasons.sql  0018_shadow_bans.sql  0019_fulfilling_requests.sql
crates/persistence/src/: in_memory.rs  sqlite.rs
crates/persistence/src/in_memory/: fulfilling.rs  post.rs  poster.rs  publication.rs  report.rs  shadow_ban.rs  skiplist.rs  tag_policy.rs  user.rs
crates/persistence/src/sqlite/: fulfilling.rs  post.rs  poster.rs  publication.rs  report.rs  scoreboard.rs  shadow_ban.rs  skiplist.rs  tag_policy.rs  telegram_copy.rs  tests.rs  user.rs
crates/telegram_bot/: Cargo.toml
crates/telegram_bot/src/: announcer.rs  commands.rs  housekeeper.rs  main.rs  publishers.rs  scoreboards.rs  state.rs  web.rs
crates/telemetry/src/: lib.rs
design/: domain.d2  domain.md
design/deprecated/: DESIGN.md  PLAN.md  README.md
src/: Server.ts  index.ts
src/Controllers/: CConfiguration.ts  CDatabase.ts  CFileSystem.ts  CFuraffinity.ts  CLogger.ts  Ce621API.ts  index.ts
src/Functions/: adders.ts  auth.ts  getters.ts  init.ts  logger.ts  posts.ts
src/Interfaces/: IConfiguration.ts  IContext.ts  IFileSystem.ts  IGeneric.ts  IImageSite.ts  ILogger.ts  IOptions.ts  index.ts
src/models/: admin.ts  init-models.ts  post.ts  queue.ts  tag.ts
tools/: ycb-submit.user.js
webapp/: package-lock.json  package.json  svelte.config.js  vite.config.js
webapp/src/: app.html
webapp/src/lib/: Icon.svelte  Loader.svelte  Lottie.svelte  Media.svelte  Modal.svelte  SwipeDeck.svelte  TagInput.svelte  api.js  browse_session.js  changelog.js  icons.js  store.js
webapp/src/lib/lottie/: loader.json  splash.json
webapp/src/routes/: +layout.svelte  +page.svelte
webapp/src/routes/admin/: +page.svelte
webapp/src/routes/admin/poster/[id]/: +page.svelte
webapp/src/routes/admin/user/[id]/: +page.svelte
webapp/src/routes/browse/: +page.svelte
webapp/src/routes/browse/queries/: +page.svelte
webapp/src/routes/changelog/: +page.svelte
webapp/src/routes/feed/: +page.svelte
webapp/src/routes/feed/poster/[id]/: +page.svelte
webapp/src/routes/reports/: +page.svelte
webapp/src/routes/review/: +page.svelte
webapp/src/routes/submit/: +page.svelte
