[package]
name = "infra-furaffinity"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
domain.workspace = true
governor = "0.10.4"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "cookies"] }
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
