[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
application = { version = "0.1.0", path = "../application" }
async-trait.workspace = true
axum = "0.8.9"
chrono.workspace = true
domain.workspace = true
infra-e621 = { version = "0.1.0", path = "../infra-e621" }
infra-fixup = { version = "0.1.0", path = "../infra-fixup" }
infra-furaffinity = { version = "0.1.0", path = "../infra-furaffinity" }
persistence = { version = "0.1.0", path = "../persistence" }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url.workspace = true
